--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "animate.css": "^3.7.0",
     "animated-vue": "^0.5.3",
-    "auth0-js": "^9.8.0",
+    "auth0-js": "^9.10.1",
     "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "vee-validate": "^2.1.2",
-    "vue": "^2.5.17",
-    "vue-awesome": "^3.1.3",
+    "bootstrap-vue": "^2.0.0-rc.15",
+    "vee-validate": "^2.2.0",
+    "vue": "^2.6.10",
+    "vue-awesome": "^3.5.4",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -40,39 +45,42 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.4.1",
-    "chromedriver": "^2.43.0",
-    "copy-webpack-plugin": "^4.5.3",
+    "chalk": "^2.4.2",
+    "chromedriver": "^2.46.0",
+    "copy-webpack-plugin": "^4.6.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.4",
     "jest-serializer-vue": "^0.3.0",
+    "moment": "^2.24.0",
     "nightwatch": "^0.9.21",
-    "node-notifier": "^5.1.2",
+    "node-notifier": "^5.4.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.18",
+    "portfinder": "^1.0.20",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.1.6",
     "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "selenium-server": "^3.14.0",
-    "semver": "^5.6.0",
+    "rimraf": "^2.6.3",
+    "selenium-server": "^3.141.59",
+    "semver": "^5.7.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
-    "vue-loader": "^13.7.3",
+    "vue-loader": "^14.2.2",
+    "vue-moment": "^4.0.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^3.12.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^2.11.3",
-    "webpack-merge": "^4.1.4"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
   "engines": {
     "node": ">= 6.0.0",
