--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "animate.css": "^3.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/free-regular-svg-icons": "^5.10.2",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "animate.css": "^3.7.2",
     "animated-vue": "^0.5.3",
-    "auth0-js": "^9.10.1",
-    "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.15",
-    "vee-validate": "^2.2.0",
+    "auth0-js": "^9.11.3",
+    "axios": "^0.18.1",
+    "bootstrap-vue": "^2.0.0",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-awesome": "^3.5.4",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.2",
+    "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -58,29 +58,29 @@
     "jest-serializer-vue": "^0.3.0",
     "moment": "^2.24.0",
     "nightwatch": "^0.9.21",
-    "node-notifier": "^5.4.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "node-notifier": "^5.4.3",
+    "optimize-css-assets-webpack-plugin": "^3.2.1",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.20",
+    "portfinder": "^1.0.24",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.1.6",
     "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.7.1",
     "selenium-server": "^3.141.59",
-    "semver": "^5.7.0",
+    "semver": "^5.7.1",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
-    "vue-loader": "^14.2.2",
+    "vue-loader": "^14.2.4",
     "vue-moment": "^4.0.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.0.0",
+    "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.2"
   },
   "engines": {
     "node": ">= 6.0.0",
